--- a/project/AVRGCC7/AVRGCC7/Debug/Makefile
+++ b/project/AVRGCC7/AVRGCC7/Debug/Makefile
@@ -35,6 +35,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../TWI.c \
 ../i2clib.c \
 ../main.c \
 ../uartlib.c
@@ -47,24 +48,28 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+TWI.o \
 i2clib.o \
 main.o \
 uartlib.o
 
 
 OBJS_AS_ARGS +=  \
+TWI.o \
 i2clib.o \
 main.o \
 uartlib.o
 
 
 C_DEPS +=  \
+TWI.d \
 i2clib.d \
 main.d \
 uartlib.d
 
 
 C_DEPS_AS_ARGS +=  \
+TWI.d \
 i2clib.d \
 main.d \
 uartlib.d
@@ -79,6 +84,8 @@ ADDITIONAL_DEPENDENCIES:=
 OUTPUT_FILE_DEP:= ./makedep.mk
 
 # AVR32/GNU C Compiler
+
+
 
 
 
